--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -62,35 +62,42 @@
   \begin{mdframed}[style=exercise]
     \begin{align}
         X(n)&=\sum_{k=0}^{N-1} x(k)e^{-j\frac{2\pi kn}{N}} \\
-        x(k)&=\frac{1}{N}\sum_{n=0}^{N-1} X(n)e^{j\frac{2\pi kn}{N}} 
+        x(k)&=\frac{1}{N}\sum_{n=0}^{N-1} X(n)e^{j\frac{2\pi kn}{N}} \\
     \end{align}
   \end{mdframed}
+Die DFT bewirkt eine implizite Periodisierung (math. Modulo)
+$\tilde{x}(k) = x([k]_{modN})$
+  \begin{center}
+      \includegraphics[width=.2\textwidth]{./img/x_k.png}
+      \includegraphics[width=.2\textwidth]{./img/x_mk.png}
+  \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% DFT-Korrespondenzen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Fehler mit scale
 \scriptsize
 \begin{center}
 \begin{tabular}{ | c | c | c | }
 \cline{1-3}
         & Zeitbereich & Spektralbereich \\
 \cline{1-3}
-        Linearität & $a\cdot x_1(k) b\cdot x_2(k)$ & $a\cdot X_1(n) +b\cdot X_2(n)$ \\
+        Linearität & $a\cdot x_1(k)+ b\cdot x_2(k)$ & $a\cdot X_1(n) +b\cdot X_2(n)$ \\
 \cline{1-3}
-        Zeit-Verschiebung & $x(k\textcolor{red}{-}k_0)$ & $e^{\textcolor{red}{-}j\frac{2\pi nk_0}{N}} X(n)$\\
+        Zeit-Verschiebung & $x([k\textcolor{red}{-}k_0]_{modN})$ & $e^{\textcolor{red}{-}j\frac{2\pi nk_0}{N}} X(n)$\\
 \cline{1-3}
-        Frequenz-Verschiebung & $e^{\textcolor{red}{-}j\frac{2\pi nk_0}{N}} x(k)$ & $X(n\textcolor{red}{+}k_0)$ \\  
+        Frequenz-Verschiebung & $e^{\textcolor{red}{-}j\frac{2\pi nk_0}{N}} x(k)$ & $X([n\textcolor{red}{+}k_0]_{modN})$ \\  
 \cline{1-3}
-        Spiegelung & $x(-k)$ & $X(-n)$ \\  
+        Spiegelung & $x([-k]_{modN})$ & $X([-n]_{modN})$ \\  
 \cline{1-3}
-        Konj.Kompl & $x^*(k)$& $X^*(-n)$\\ 
+        Konj.Kompl & $x^*(k)$& $X^*([-n]_{modN})$\\ 
+\cline{1-3}
+        Konj.Kompl.gespiegelt & $x^*([-k]{modN})$& $X^*(n)$\\ 
 \cline{1-3}
         Faltung & $x_1(k) \circledast x_2(k)$ & $X_1(n)X_2(n)$ \\  
 \cline{1-3}
         Multiplikation & $x_1(k)x_2(k)$ & $\frac{1}{N} X_1(n) \circledast X_2(n)$ \\
 \cline{1-3}
-        gerade Symmetrie & $x_g(k)=\frac{x(k)+x(-k)}{2}$ & $X_g(n)=\frac{X(n)+X(-n)}{2}$ \\
+        gerade Symmetrie & $x_g(k)=\frac{x(k)+\tilde{x}(-k)}{2}$ & $X_g(n)=\frac{X(n)+X(-n)}{2}$ \\
 \cline{1-3}
-        ungerade Symmetrie & $x_u(k)=\frac{x(k)-x(-k)}{2}$ & $X_u(n)=\frac{X(n)-X(-n)}{2}$ \\
+        ungerade Symmetrie & $x_u(k)=\frac{x(k)-\tilde{x}(-k)}{2}$ & $X_u(n)=\frac{X(n)-X(-n)}{2}$ \\
 \cline{1-3}
 \end{tabular}
 \end{center}
@@ -262,13 +269,13 @@ Scharmittelwert und Zeitmittelwert sind aquivalent\\
 \cline{1-3}
         & Zeitmittelwert(Schätzung) & Scharmittelwert \\
 \cline{1-3}
-        linearer Mittelwert $\mu_x$ & $\mu_x = \frac{1}{N}\sum_{k=0}^{N-1}x(k)$ & E[x(k)] \\
+        lin. Mittelwert $\mu_x$ & $\mu_x = \frac{1}{N}\sum_{k=0}^{N-1}x(k)$ & E[x(k)] \\
 \cline{1-3}
         Varianz $\sigma_x^2$ & $\sigma_x^2 = \frac{1}{N}\sum_{k=0}^{N-1}\abs{x(k)-\mu_x}^2$ & $E[\abs{x(k)-\mu_x}^2]$ \\
 \cline{1-3}
-        Autokorrelation $\varphi_{xx}(\lambda)$ & $\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)x(k+\lambda) $ & $E[x^*(k)x(k+\lambda)]$ \\
+        Autokorr. $\varphi_{xx}(\lambda)$ & $\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)x(k+\lambda) $ & $E[x^*(k)x(k+\lambda)]$ \\
 \cline{1-3}
-        Kreuzkorrelation $\varphi_{xy}(\lambda)$ & $\varphi_{xy}(\lambda)=\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)y(k+\lambda) $ & $E[x^*(k)y(k+\lambda)]$ \\
+        Kreuzkorr. $\varphi_{xy}(\lambda)$ & $\varphi_{xy}(\lambda)=\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)y(k+\lambda) $ & $E[x^*(k)y(k+\lambda)]$ \\
 \cline{1-3}
 \end{tabular}
 \end{center}
@@ -369,15 +376,11 @@ $        x_w(k) = x(k)w(k) \laplace \  X_w(n) = X(n)*W(n) \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Fensterfunktionen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Zeitfenster}
-  % \begin{right}
-  %     \includegraphics[width=.18\textwidth]{./img/rect.png}
-  % \end{right}
-  % \begin{right}
-  %     \includegraphics[width=.18\textwidth]{./img/hamming.png}
-  % \end{right}
-  % \begin{right}
-  %     \includegraphics[width=.18\textwidth]{./img/hann.png}
-  % \end{right}
+  \begin{center}
+      \includegraphics[width=.16\textwidth]{./img/rect.png}
+      \includegraphics[width=.16\textwidth]{./img/hamming.png}
+      \includegraphics[width=.16\textwidth]{./img/hann.png}
+  \end{center}
   Rechteck um bei k=0 beginnend (um $\frac{N}{2}$ verschoben)
   \begin{mdframed}[style=exercise]
     \begin{align}
