--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -66,8 +66,10 @@
         x(k)&=\frac{1}{N}\sum_{n=0}^{N-1} X(n)e^{j\frac{2\pi kn}{N}} \\
     \end{align}
   \end{mdframed}
-Die DFT bewirkt eine implizite Periodisierung (math. Modulo)
-$\tilde{x}(k) = x([k]_{modN})$
+Die DFT bewirkt eine implizite Periodisierung. \\ 
+Math. Modulo:
+$\tilde{x}(k) = x([k]_{modN})$ 
+$[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
   \begin{center}
       \includegraphics[width=.2\textwidth]{./img/x_k.png}
       \includegraphics[width=.2\textwidth]{./img/x_mk.png}
@@ -102,7 +104,7 @@ $\tilde{x}(k) = x([k]_{modN})$
 \cline{1-3}
 \end{tabular}
 \end{center}
-% }
+\normalsize
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% DFT-Korrespondenzen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \begin{center}
@@ -135,18 +137,31 @@ $\tilde{x}(k) = x([k]_{modN})$
   \end{mdframed}
   \subsubsection{Zyklische Faltung}
   $x_1(k)$ und $x_2(k)$ durch \textbf{Zero-Padding} auf $N = N_1 +N_2 -1$ 
+\scriptsize
   \begin{mdframed}[style=exercise]
     \begin{align}
         x_1(k) \circledast x_2(k) = \sum_{\nu =0}^{N-1} x_1(\nu) x_2([k-\nu]_{modN})= \sum_{\nu =0}^{N-1}x_1([k-\nu]_{modN}) x_2(\nu)
     \end{align}
   \end{mdframed}
+\normalsize
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Korrelation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \subsection{Korrelation}
-  $x_1(k) \in [0,N_1-1]$ und $x_2(k) \in [0,N_2-1]$
+  $x_1(k) \in [0,N_1-1]$ und $x_2(k) \in [0,N_2-1]$ nicht kommutativ sondern an der y-Achse gespiegelt ($r_{x1x2}(\lambda)=r_{x2x1}(-\lambda)$).
   \begin{mdframed}[style=exercise]
     \begin{align}
-        r_{x1x2}(\lambda) = \sum_{k=-\infty}^{\infty}x_1^*(k) x_2(k+\lambda) 
+        r_{x1x2}(\lambda) = \sum_{k=-\infty}^{\infty}x_1^*(k) x_2(k+\lambda)
+    \end{align}
+  \end{mdframed}
+\begin{itemize}
+    \item Nicht-Erwartungstreue Schätzung $\hat{\varphi}_{x1x2}$
+    \item Erwartungstreue Schätzung $\hat{\varphi}_{x1x2}^{'}$
+    \item Normierung auf $N = max(N_1,N_2)$
+\end{itemize}
+  \begin{mdframed}[style=exercise]
+    \begin{align}
+        \hat{\varphi}_{x1x2} = \frac{1}{N} r_{x1x2}(\lambda)\\
+        \hat{\varphi}_{x1x2}^{'} = \frac{1}{N-\abs{\lambda}} r_{x1x2}(\lambda)
     \end{align}
   \end{mdframed}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -280,6 +295,7 @@ Scharmittelwert und Zeitmittelwert sind aquivalent\\
 \cline{1-3}
 \end{tabular}
 \end{center}
+\normalsize
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Leistungsdichtespektrum %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Leistungsdichtespektrum LDS}
@@ -368,7 +384,7 @@ Mit konst. Mittelwerten $E[u(k-\nu)]=\mu_x$ und $E[y(k)]=\mu_y$
 Kein Ganzzahliges Vielfaches fällt in das Beobachtungsfenster $w(k)$.\\
 Bsp: Sinus $x(t) = sin(w_0t)\cdot w(t)$ mit $w(t)=rect(\frac{t-T/2}{T})$
   \begin{mdframed}[style=exercise]
-$        x_w(k) = x(k)w(k) \laplace \  X_w(n) = X(n)*W(n) \\
+        $x_w(k) = x(k)w(k) \laplace \  X_w(n) = X(n)*W(n) \\
         sin(w_0t) \fourier j\pi(\delta_0(w+w_0)-\delta_0(w-w_0))\\
         rect(\frac{t-T/2}{T}) \fourier Tsi(w\frac{T}{2})e^{-jw\frac{T}{2}}\\
         X(jw)=\frac{2}{2\pi}[j\pi(\delta_0(w+w_0)-\delta_0(w+w_0))]*si(w\frac{T}{2})e^{-jw\frac{T}{2}}]\\
@@ -379,7 +395,7 @@ $        x_w(k) = x(k)w(k) \laplace \  X_w(n) = X(n)*W(n) \\
 \subsection{Zeitfenster}
   \begin{center}
       \includegraphics[width=.16\textwidth]{./img/rect.png}
-      \includegraphics[width=.16\textwidth]{./img/hamming.png}
+      \includegraphics[width=.15\textwidth]{./img/hamming.png}
       \includegraphics[width=.16\textwidth]{./img/hann.png}
   \end{center}
   Rechteck um bei k=0 beginnend (um $\frac{N}{2}$ verschoben)
